# wb-hometask-10

./: pyproject.toml
quotes/: migration_db.py
quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quoteapp/management/commands/: migration_db.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_author_born_date_alter_author_born_location_and_more.py  0003_alter_author_description.py  0004_alter_quote_description.py  0005_alter_quote_description.py  0006_authorreg_quoteregfield_quotereg.py  0007_authorreg_user_quotereg_user_quoteregfield_user.py
quotes/quoteapp/static/quoteapp/: style.css
quotes/quoteapp/templates/quoteapp/: addauthor.html  addquote.html  author.html  base.html  index.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  views.py
